made drinks page more userfriendly for laptops, fixed bac info modal on mobile

--- a/src/Style.css
+++ b/src/Style.css
@@ -1027,7 +1027,7 @@ input[type="radio"]:checked + label:before {
   padding: 0.8rem 2rem;
   align-self: center;
 }
-/*  */
+
 .drinkcard__plus-icon {
   grid-row: 1 / 2;
   grid-column: 4 / 5;
@@ -1276,13 +1276,105 @@ input[type="radio"]:checked + label:before {
 
 /* ------- newdrink -------*/
 
-@media only screen and (max-width: 1300px) {
+@media only screen and (max-height: 1000px) {
+  .drinks__drink-card-container {
+    grid-row: 1 / 3;
+    margin-top: 11rem;
+  }
+
+  .drinks__main-btns {
+    grid-row: 1 / 2;
+    margin: 4.5rem 0rem 3rem;
+  }
+
+  .drinks__main-btn {
+    border-width: 0.2rem;
+  }
+
   .drinkcard__container {
-    width: 50vw;
+    border-top: 0.2rem solid var(--primary-color);
+    margin: 0.8rem;
+    width: 45vw;
+    padding: 0.6rem 2rem;
+  }
+
+  .drinkcard__action-icon {
+    width: 2.2rem;
+    height: 2.2rem;
+  }
+
+  .drinkcard__parameter-container > h4 {
+    padding: 0.6rem 0;
+    font-size: 0.9rem;
+  }
+
+  .drinkcard__parameter-container > h3 {
+    font-size: 1.2rem;
+    padding-bottom: 0.4rem;
+  }
+
+  .drinkcard__title > h2 {
+    font-size: 1.45rem;
+  }
+
+  .drinkcard__shot-icon,
+  .drinkcard__whisky-icon {
+    width: 2.5rem;
+    height: 2.5rem;
+  }
+
+  .drinkcard__other-icon,
+  .drinkcard__cognac-icon,
+  .drinkcard__mojito-icon {
+    width: 2.8rem;
+    height: 2.8rem;
+  }
+
+  .drinkcard__beer-icon {
+    width: 2.7rem;
+    height: 2.7rem;
+  }
+
+  .drinkcard__wine-icon,
+  .drinkcard__coctail-icon {
+    width: 3rem;
+    height: 3rem;
+  }
+
+  .drinkcard__martini-icon {
+    width: 2.9rem;
+    height: 2.9rem;
+  }
+
+  .newdrink__container {
+    align-self: center;
   }
 
   .newdrink__form {
-    width: 50vw;
+    border-top: 0.2rem solid var(--primary-color);
+    margin: 0.8rem;
+    width: 45vw;
+    padding: 0.6rem 2rem;
+  }
+
+  .newdrink__parameter-container > h4 {
+    padding: 0.6rem 0;
+    font-size: 1rem;
+  }
+
+  .newdrink__timePassed-input,
+  .newdrink__abv-input,
+  .newdrink__volume-input {
+    font-size: 1.1rem;
+    width: 2.8rem;
+    padding-left: 0.5rem;
+  }
+
+  .newdrink__type-input {
+    grid-column: 1 / 3;
+    margin-bottom: 1.2rem;
+    padding: 0 0.5rem;
+    font-size: 1.2rem;
   }
 }
 
@@ -1299,20 +1391,8 @@ input[type="radio"]:checked + label:before {
     grid-template-columns: 0fr 7fr 0fr;
   }
 
-  .drinks__main-btns {
-    margin: 12.5rem 0rem 3rem;
-  }
-
   .drinks__logo {
-    grid-column: 2 / 3;
-    justify-self: center;
-    position: static;
-    margin: 1.8rem;
-    margin-bottom: 3rem;
-  }
-
-  .drinks__logo > h1 {
-    font-size: 3rem;
+    display: none;
   }
 
   .drinks__edit-user-btn {
@@ -1320,11 +1400,11 @@ input[type="radio"]:checked + label:before {
   }
 
   .drinkcard__container {
-    width: 80vw;
+    width: 60vw;
   }
 
   .newdrink__form {
-    width: 80vw;
+    width: 60vw;
   }
 }
 
@@ -1342,6 +1422,11 @@ input[type="radio"]:checked + label:before {
     background-color: var(--background-color);
     border-top: 0.275rem solid var(--primary-color);
     overflow-y: hidden;
+  }
+
+  .drinks__drink-card-container {
+    grid-row: 2 / 3;
+    margin: 0;
   }
 
   .drinks__main-btn {
@@ -1364,10 +1449,11 @@ input[type="radio"]:checked + label:before {
 
   .drinks__logo {
     margin-top: 0;
-  }
-
-  .drinks__logo > h1 {
-    font-size: 2.8em;
+    grid-column: 2 / 3;
+    justify-self: center;
+    position: static;
+    margin: 1.8rem;
+    margin-bottom: 3rem;
   }
 
   .drinks__main-btns {
@@ -1858,6 +1944,23 @@ input[type="radio"]:checked + label:before {
     margin-top: 1.5rem;
     margin-bottom: 2rem;
     max-width: 65vh;
+  }
+
+  .bac__modal-content {
+    top: 35%;
+    margin-left: -45vw;
+    width: 90vw;
+  }
+
+  .bac__modal-content-body {
+    font-weight: 400;
+    font-size: 1.1rem;
+    margin: 2rem 1rem 0;
+    line-height: 1.6rem;
+  }
+
+  .bac__modal-content-btn {
+    width: 40vw;
   }
 }
 /* ------- bac info -------*/
